Bug 40897: Resized the field lengths to ensure even lengths
To test:
1. Select an existing record and manage items (or create a new record) so that you are on the additem.pl form.
2. Notice that the fields are uneven lengths.
3. Apply the patch. Do a yarn build and restart_all. Clear your browser cache if necessary.
4. Refresh the additem.pl page and notice that the fields are all the same length now.
5. Sign off and have a great day!

(cherry picked from commit 932c1c07dd1ded6157b9b766af119043d0ec25e0)

--- a/koha-tmpl/intranet-tmpl/prog/css/addbiblio.css
+++ b/koha-tmpl/intranet-tmpl/prog/css/addbiblio.css
@@ -245,7 +245,7 @@ div.item_edit_form ol li {
 }
 
 .item_edit_form .input_marceditor {
-    flex-basis: 50%;
+    flex-basis: 60%;
     float: none;
 }
 
